--- a/components/footer.html
+++ b/components/footer.html
@@ -13,16 +13,16 @@
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </div>
-      <div class="social-links">
+      <div class="footer-social-links">
         <a
           href="https://www.linkedin.com/in/magsinoaderiel/"
-          class="social-link"
+          class="footer-social-link"
           ><i class="fab fa-linkedin-in"></i
         ></a>
-        <a href="https://github.com/JohnMagsino" class="social-link"
+        <a href="https://github.com/JohnMagsino" class="footer-social-link"
           ><i class="fab fa-github"></i
         ></a>
-        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="footer-social-link"><i class="fab fa-facebook-f"></i></a>
       </div>
       <p class="copyright">© 2025 John Aderiel Magsino. All rights reserved.</p>
     </div>
