--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
 @import url('components/experience.css');
 @import url('components/contact.css');
 @import url('components/footer.css');
+@import url('components/chatbot.css');
 
 /* Global Styles */
 :root {
