--- a/components/hero.html
+++ b/components/hero.html
@@ -43,7 +43,7 @@
         </div>
         <div class="hero-image">
             <div class="image-wrapper">
-                <img src="assets/profile_pic.jpg" alt="John Aderiel Magsino" loading="lazy">
+                <img src="assets/profile_pic.png" alt="John Aderiel Magsino" loading="lazy">
                 <div class="image-border"></div>
                 <div class="image-badge">
                     <i class="fas fa-code"></i>
