--- a/components/projects.html
+++ b/components/projects.html
@@ -47,9 +47,12 @@
                         </div>
                         <div class="stat-badge">
                             <i class="fas fa-percentage"></i>
-                            <span>90% Accuracy</span>
+                            <span>90% ML Accuracy</span>
                         </div>
                     </div>
+                    <a class="github-btn" href="https://github.com/username/truckserbisyo" target="_blank" rel="noopener">
+                        <i class="fab fa-github"></i> View on GitHub
+                    </a>
                 </div>
             </div>
             
@@ -96,6 +99,9 @@
                             <span>Cognitive Development</span>
                         </div>
                     </div>
+                    <a class="github-btn" href="https://github.com/username/kids-learning-app" target="_blank" rel="noopener">
+                        <i class="fab fa-github"></i> View on GitHub
+                    </a>
                 </div>
             </div>
             
@@ -142,6 +148,9 @@
                             <span>Real-time Updates</span>
                         </div>
                     </div>
+                    <a class="github-btn" href="https://github.com/username/event-tracking-system" target="_blank" rel="noopener">
+                        <i class="fab fa-github"></i> View on GitHub
+                    </a>
                 </div>
             </div>
         </div>
